WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207784
[Web Animations] Missing call to DocumentTimeline::resumeAnimations() in Frame::resumeActiveDOMObjectsAndAnimations()
https://bugs.webkit.org/show_bug.cgi?id=207784
Summary
[Web Animations] Missing call to DocumentTimeline::resumeAnimations() in Fram...
Antoine Quint
Reported
2020-02-14 13:13:36 PST
[Web Animations] Missing call to DocumentTimeline::resumeAnimations() in Frame::resumeActiveDOMObjectsAndAnimations()
Attachments
Patch
(1.86 KB, patch)
2020-02-14 13:14 PST
,
Antoine Quint
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2020-02-14 13:14:56 PST
Created
attachment 390801
[details]
Patch
Antoine Quint
Comment 2
2020-02-14 13:15:01 PST
<
rdar://problem/59251858
>
Dean Jackson
Comment 3
2020-02-14 13:16:40 PST
Comment on
attachment 390801
[details]
Patch Please land a test asap. And maybe an explanation of why this was only WK1.
Antoine Quint
Comment 4
2020-02-14 13:20:04 PST
Committed
r256636
: <
https://trac.webkit.org/changeset/256636
>
Jon Lee
Comment 5
2020-02-14 13:51:23 PST
Why isn't the conditional inside resumeAnimationsForDocument()?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug