Cherry-pick r256636. rdar://problem/59478734

[Web Animations] Missing call to DocumentTimeline::resumeAnimations() in Frame::resumeActiveDOMObjectsAndAnimations()
    https://bugs.webkit.org/show_bug.cgi?id=207784
    <rdar://problem/59251858>

    Patch by Antoine Quint <graouts@webkit.org> on 2020-02-14
    Reviewed by Dean Jackson.

    After auditing the code, there was one call to CSSAnimationController::resumeAnimationsForDocument() that missed a matching DocumentTimeline::resumeAnimations()
    call should the Web Animations flag be on.

    * page/Frame.cpp:
    (WebCore::Frame::resumeActiveDOMObjectsAndAnimations):

    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256636 268f45cc-cd09-0410-ab3c-d52691b4dbfc

git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@256696 268f45cc-cd09-0410-ab3c-d52691b4dbfc